update nav styles to correct focus outline being cut off

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -62,9 +62,10 @@ nav {
 			margin: 0 10px 0 0;
 			font-family: $sansStack;
 			list-style: none;
-			li + li { margin-top: 0; }
+			//li + li { margin-top: 0; }
 			> li {
 				float: left;
+				margin: 5px;
 				> a, a.contact {
 					display: block;
 					float: none;
